--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      var socket = io();
-      var s2 = io("/chat");
+      var socket = io("http://localhost:8080");
       socket.on("error", function (err) {
         console.log("received socket error:");
         console.log(err);
@@ -70,27 +69,8 @@
         console.log(msg);
       });
 
-      s2.on("reply", function (msg) {
-        console.log(msg);
-      });
-      s2.on("error", function (err) {
-        console.log("received s2 error:");
-        console.log(err);
-      });
-
       socket.on("reply", function (msg) {
         $("#messages").append($("<li>").text(msg));
-      });
-
-      $("form").submit(function () {
-        s2.emit("msg", $("#m").val(), function (data) {
-          $("#messages").append($("<li>").text("ACK CALLBACK: " + data));
-        });
-
-        socket.emit("notice", $("#m").val());
-
-        $("#m").val("");
-        return false;
       });
     </script>
   </body>
